y.output
Grammar

    0 $accept: Program $end

    1 Program: FuncBodies

    2 FuncBodies: FuncBodies FuncBody
    3           | FuncBody

    4 FuncBody: T_FunBegin Stmts

    5 Stmts: Stmts Stmt
    6      | Stmt

    7 Stmt: '(' Note ')'
    8     | '(' Barrier ')'
    9     | '(' Insn ')'
   10     | '(' JumpInsn ')'
   11     | '(' Call ')'
   12     | '(' CodeLabel ')'

   13 Note: T_Note T_IntConstant T_IntConstant T_IntConstant T_IntConstant
   14     | T_Note T_IntConstant T_IntConstant T_IntConstant

   15 Barrier: T_Barrier T_IntConstant T_IntConstant T_IntConstant

   16 CodeLabel: T_CodeLabel T_IntConstant T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Nil ')'
   17          | T_CodeLabel T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Nil ')'
   18          | T_CodeLabel T_IntConstant T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_StringConstant ')'

   19 Integer: '-' T_IntConstant
   20        | T_IntConstant

   21 Insn: T_Insn T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')'
   22     | T_Insn T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' T_ExprList '(' Operand ')' '(' T_Nil ')' ')'
   23     | T_Insn T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' Integer '(' T_ExprList '(' Operand ')' '(' T_Nil ')' ')'
   24     | T_Insn T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' Integer '(' T_Nil ')'
   25     | T_Insn T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_ConstInt T_IntConstant ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')'
   26     | T_Insn T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' ':' T_IntConstant '(' T_Nil ')' ')'

   27 MainCmd: PlainCmd
   28        | ParallelCmd

   29 PlainCmd: ClobberCmd
   30         | SetCmd
   31         | UseCmd

   32 ParallelCmd: T_Parallel Cmds T_EndPara

   33 Cmds: Cmds '(' PlainCmd ')'
   34     | '(' PlainCmd ')'

   35 ClobberCmd: T_Clobber '(' T_Reg ':' TypeInfo T_IntConstant ')'
   36           | T_Clobber '(' T_Reg Flags ':' TypeInfo T_IntConstant ')'
   37           | T_Clobber '(' T_Mem ':' '(' ')' ')'
   38           | T_Clobber '(' T_Mem ':' '(' Operand ')' ')'

   39 SetCmd: T_Set '(' Operand ')' '(' Operand ')'

   40 UseCmd: T_Use '(' T_Reg Flags ':' TypeInfo T_IntConstant ')'

   41 Operand: IntOperand
   42        | ExprOperand
   43        | ExtendOperand
   44        | SymbolRefOperand
   45        | DerefOperand
   46        | NegOperand
   47        | Dest

   48 IntOperand: T_ConstInt Integer

   49 ExprOperand: LocInfo ':' TypeInfo Expr
   50            | AshiftExpr
   51            | LshiftExpr
   52            | AshiftRtExpr
   53            | LshiftRtExpr
   54            | CompareExpr
   55            | PlusExpr
   56            | MinusExpr
   57            | MultExpr
   58            | DivExpr
   59            | UDivExpr
   60            | ModExpr
   61            | UModExpr
   62            | XorExpr
   63            | SubregExpr
   64            | ConditionExpr
   65            | SymbolRefExpr

   66 ExtendOperand: T_SiExtend TypeInfo '(' Operand ')'
   67              | T_ZeExtend TypeInfo '(' Operand ')'

   68 DerefOperand: LocInfo ':' TypeInfo '(' Operand ')'

   69 SymbolRefOperand: T_SymbolRef Flags ':' T_DIType '(' T_StringConstant ')'

   70 NegOperand: T_Neg ':' TypeInfo '(' Operand ')'
   71           | T_Neg '(' Operand ')'

   72 LocInfo: MemType Flags
   73        | MemType

   74 Flags: Flags Flag
   75      | Flag

   76 Flag: T_IFlag
   77     | T_VFlag
   78     | T_FFlag
   79     | T_CFlag

   80 MemType: T_Mem
   81        | T_Reg

   82 TypeInfo: T_SIType
   83         | T_DIType
   84         | T_QIType
   85         | T_TIType
   86         | T_CCType
   87         | T_CCZType
   88         | T_CCGCType
   89         | T_CCGOCType

   90 Expr: IntegerExpr
   91     | '(' PlusExpr ')'
   92     | '(' MinusExpr ')'
   93     | '(' MultExpr ')'
   94     | '(' AshiftExpr ')'
   95     | '(' LshiftExpr ')'
   96     | '(' AshiftRtExpr ')'
   97     | '(' LshiftRtExpr ')'
   98     | '(' XorExpr ')'
   99     | '(' SubregExpr ')'
  100     | '(' CompareExpr ')'
  101     | '(' DivExpr ')'
  102     | '(' UDivExpr ')'
  103     | '(' ModExpr ')'
  104     | '(' UModExpr ')'
  105     | '(' ConditionExpr ')'
  106     | '(' SymbolRefExpr ')'

  107 IntegerExpr: Integer

  108 PlusExpr: T_Plus TypeInfo '(' Operand ')' '(' Operand ')'

  109 MinusExpr: T_Minus TypeInfo '(' Operand ')' '(' Operand ')'

  110 MultExpr: T_Mult TypeInfo '(' Operand ')' '(' Operand ')'

  111 DivExpr: T_Div TypeInfo '(' Operand ')' '(' Operand ')'

  112 UDivExpr: T_UDiv TypeInfo '(' Operand ')' '(' Operand ')'

  113 ModExpr: T_Mod TypeInfo '(' Operand ')' '(' Operand ')'

  114 UModExpr: T_UMod TypeInfo '(' Operand ')' '(' Operand ')'

  115 LshiftExpr: T_Lshift TypeInfo '(' Operand ')' '(' Operand ')'

  116 AshiftExpr: T_Ashift TypeInfo '(' Operand ')' '(' Operand ')'

  117 LshiftRtExpr: T_LshiftRt TypeInfo '(' Operand ')' '(' Operand ')'

  118 AshiftRtExpr: T_AshiftRt TypeInfo '(' Operand ')' '(' Operand ')'

  119 XorExpr: T_Xor TypeInfo '(' Operand ')' '(' Operand ')'

  120 SubregExpr: T_Subreg TypeInfo '(' Operand ')' Integer

  121 CompareExpr: T_Compare TypeInfo '(' Operand ')' '(' Operand ')'

  122 ConditionExpr: Condition ':' TypeInfo '(' Operand ')' '(' Operand ')'

  123 SymbolRefExpr: T_SymbolRef ':' TypeInfo '(' T_StringConstant ')'

  124 JumpInsn: T_JumpInsn T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Set '(' T_Pc ')' '(' Dest ')' ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')' T_RArrow T_IntConstant
  125         | T_JumpInsn T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Set '(' T_Pc ')' '(' Dest ')' ')' T_IntConstant '(' T_Nil ')' T_RArrow T_IntConstant

  126 Dest: Label
  127     | IfThenElse
  128     | Pc

  129 Label: T_LabelRef T_IntConstant
  130      | T_LabelRef ':' TypeInfo T_IntConstant

  131 IfThenElse: T_IfThenElse '(' Comparison ')' '(' Operand ')' '(' Operand ')'
  132           | T_IfThenElse ':' TypeInfo '(' Comparison ')' '(' Operand ')' '(' Operand ')'

  133 Pc: T_Pc

  134 Comparison: Condition '(' Operand ')' '(' Operand ')'

  135 Condition: T_Lt
  136          | T_Gt
  137          | T_Le
  138          | T_Ge
  139          | T_Eq
  140          | T_Ne
  141          | T_Gtu
  142          | T_Ltu
  143          | T_Geu
  144          | T_Leu

  145 Call: RetCall
  146     | NoRetCall

  147 RetCall: T_CallInsn T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Set '(' T_Reg ':' TypeInfo T_IntConstant ')' '(' T_Call '(' T_Mem ':' T_QIType '(' T_SymbolRef ':' T_DIType '(' T_StringConstant ')' ')' ')' '(' T_ConstInt Integer ')' ')' ')' T_StringConstant ':' T_IntConstant Integer '(' Junk2 ')' '(' ExprList ')'

  148 NoRetCall: T_CallInsn T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Call '(' T_Mem ':' T_QIType '(' T_SymbolRef ':' T_DIType '(' T_StringConstant ')' ')' ')' '(' T_ConstInt Integer ')' ')' T_StringConstant ':' T_IntConstant Integer '(' Junk2 ')' '(' ExprList ')'

  149 ExprList: ExprListExpr

  150 ExprListExpr: T_ExprList TypeInfo '(' T_Use '(' T_Reg ':' TypeInfo T_IntConstant ')' ')' '(' T_Nil ')'
  151             | '(' T_Use '(' T_Reg ':' TypeInfo T_IntConstant ')' ')' '(' T_Nil ')'
  152             | T_ExprList TypeInfo '(' T_Use '(' T_Reg ':' TypeInfo T_IntConstant ')' ')' '(' ExprListExpr ')'
  153             | '(' T_Use '(' T_Reg ':' TypeInfo T_IntConstant ')' ')' '(' ExprListExpr ')'

  154 Junk2: T_Nil
  155      | T_ExprList '(' Operand ')' '(' Junk2 ')'
  156      | T_ExprList TypeInfo '(' Operand ')' '(' Junk2 ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 8 9 10 11 12 16 17 18 21 22 23 24 25 26 33 34 35 36 37 38
    39 40 66 67 68 69 70 71 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105 106 108 109 110 111 112 113 114 115 116 117 118 119
    120 121 122 123 124 125 131 132 134 147 148 150 151 152 153 155
    156
')' (41) 7 8 9 10 11 12 16 17 18 21 22 23 24 25 26 33 34 35 36 37 38
    39 40 66 67 68 69 70 71 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105 106 108 109 110 111 112 113 114 115 116 117 118 119
    120 121 122 123 124 125 131 132 134 147 148 150 151 152 153 155
    156
'-' (45) 19
':' (58) 21 22 25 26 35 36 37 38 40 49 68 69 70 122 123 124 130 132
    147 148 150 151 152 153
error (256)
T_Note (258) 13 14
T_Insn (259) 21 22 23 24 25 26
T_JumpInsn (260) 124 125
T_CallInsn (261) 147 148
T_Call (262) 147 148
T_SymbolRef (263) 69 123 147 148
T_Nil (264) 16 17 21 22 23 24 25 26 124 125 150 151 154
T_Parallel (265) 32
T_TIType (266) 85
T_Clobber (267) 35 36 37 38
T_Set (268) 39 124 125 147
T_Use (269) 40 150 151 152 153
T_IfThenElse (270) 131 132
T_ConstInt (271) 25 48 147 148
T_Barrier (272) 15
T_Mem (273) 37 38 80 147 148
T_Reg (274) 35 36 40 81 147 150 151 152 153
T_Pc (275) 124 125 133
T_LabelRef (276) 129 130
T_IFlag (277) 76
T_VFlag (278) 77
T_FFlag (279) 78
T_CFlag (280) 79
T_SIType (281) 82
T_DIType (282) 69 83 147 148
T_QIType (283) 84 147 148
T_CCType (284) 86
T_CCZType (285) 87
T_CCGCType (286) 88
T_Plus (287) 108
T_Minus (288) 109
T_Mult (289) 110
T_Div (290) 111
T_Lshift (291) 115
T_Ashift (292) 116
T_LshiftRt (293) 117
T_AshiftRt (294) 118
T_Subreg (295) 120
T_ExprList (296) 22 23 150 152 155 156
T_EndPara (297) 32
T_RArrow (298) 124 125
T_SiExtend (299) 66
T_Compare (300) 121
T_Lt (301) 135
T_Gt (302) 136
T_Le (303) 137
T_Ge (304) 138
T_Eq (305) 139
T_Ne (306) 140
T_CodeLabel (307) 16 17 18
T_UDiv (308) 112
T_Mod (309) 113
T_UMod (310) 114
T_CCGOCType (311) 89
T_ZeExtend (312) 67
T_Gtu (313) 141
T_Ltu (314) 142
T_Leu (315) 144
T_Geu (316) 143
T_Neg (317) 70 71
T_Xor (318) 119
T_StringConstant (319) 18 21 22 25 26 69 123 124 147 148
T_IntConstant (320) 13 14 15 16 17 18 19 20 21 22 23 24 25 26 35 36
    40 124 125 129 130 147 148 150 151 152 153
T_FunBegin (321) 4
TWO (322)


Nonterminals, with rules where they appear

$accept (72)
    on left: 0
Program (73)
    on left: 1, on right: 0
FuncBodies (74)
    on left: 2 3, on right: 1 2
FuncBody (75)
    on left: 4, on right: 2 3
Stmts (76)
    on left: 5 6, on right: 4 5
Stmt (77)
    on left: 7 8 9 10 11 12, on right: 5 6
Note (78)
    on left: 13 14, on right: 7
Barrier (79)
    on left: 15, on right: 8
CodeLabel (80)
    on left: 16 17 18, on right: 12
Integer (81)
    on left: 19 20, on right: 21 22 23 24 25 26 48 107 120 124 147
    148
Insn (82)
    on left: 21 22 23 24 25 26, on right: 9
MainCmd (83)
    on left: 27 28, on right: 21 22 23 24 26
PlainCmd (84)
    on left: 29 30 31, on right: 27 33 34
ParallelCmd (85)
    on left: 32, on right: 28
Cmds (86)
    on left: 33 34, on right: 32 33
ClobberCmd (87)
    on left: 35 36 37 38, on right: 29
SetCmd (88)
    on left: 39, on right: 30
UseCmd (89)
    on left: 40, on right: 31
Operand (90)
    on left: 41 42 43 44 45 46 47, on right: 22 23 38 39 66 67 68 70
    71 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122
    131 132 134 155 156
IntOperand (91)
    on left: 48, on right: 41
ExprOperand (92)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65, on right:
    42
ExtendOperand (93)
    on left: 66 67, on right: 43
DerefOperand (94)
    on left: 68, on right: 45
SymbolRefOperand (95)
    on left: 69, on right: 44
NegOperand (96)
    on left: 70 71, on right: 46
LocInfo (97)
    on left: 72 73, on right: 49 68
Flags (98)
    on left: 74 75, on right: 36 40 69 72 74
Flag (99)
    on left: 76 77 78 79, on right: 74 75
MemType (100)
    on left: 80 81, on right: 72 73
TypeInfo (101)
    on left: 82 83 84 85 86 87 88 89, on right: 35 36 40 49 66 67 68
    70 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122
    123 130 132 147 150 151 152 153 156
Expr (102)
    on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106, on right: 49
IntegerExpr (103)
    on left: 107, on right: 90
PlusExpr (104)
    on left: 108, on right: 55 91
MinusExpr (105)
    on left: 109, on right: 56 92
MultExpr (106)
    on left: 110, on right: 57 93
DivExpr (107)
    on left: 111, on right: 58 101
UDivExpr (108)
    on left: 112, on right: 59 102
ModExpr (109)
    on left: 113, on right: 60 103
UModExpr (110)
    on left: 114, on right: 61 104
LshiftExpr (111)
    on left: 115, on right: 51 95
AshiftExpr (112)
    on left: 116, on right: 50 94
LshiftRtExpr (113)
    on left: 117, on right: 53 97
AshiftRtExpr (114)
    on left: 118, on right: 52 96
XorExpr (115)
    on left: 119, on right: 62 98
SubregExpr (116)
    on left: 120, on right: 63 99
CompareExpr (117)
    on left: 121, on right: 54 100
ConditionExpr (118)
    on left: 122, on right: 64 105
SymbolRefExpr (119)
    on left: 123, on right: 65 106
JumpInsn (120)
    on left: 124 125, on right: 10
Dest (121)
    on left: 126 127 128, on right: 47 124 125
Label (122)
    on left: 129 130, on right: 126
IfThenElse (123)
    on left: 131 132, on right: 127
Pc (124)
    on left: 133, on right: 128
Comparison (125)
    on left: 134, on right: 131 132
Condition (126)
    on left: 135 136 137 138 139 140 141 142 143 144, on right: 122
    134
Call (127)
    on left: 145 146, on right: 11
RetCall (128)
    on left: 147, on right: 145
NoRetCall (129)
    on left: 148, on right: 146
ExprList (130)
    on left: 149, on right: 147 148
ExprListExpr (131)
    on left: 150 151 152 153, on right: 149 152 153
Junk2 (132)
    on left: 154 155 156, on right: 147 148 155 156


State 0

    0 $accept: . Program $end

    T_FunBegin  shift, and go to state 1

    Program     go to state 2
    FuncBodies  go to state 3
    FuncBody    go to state 4


State 1

    4 FuncBody: T_FunBegin . Stmts

    '('  shift, and go to state 5

    Stmts  go to state 6
    Stmt   go to state 7


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 8


State 3

    1 Program: FuncBodies .
    2 FuncBodies: FuncBodies . FuncBody

    T_FunBegin  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    FuncBody  go to state 9


State 4

    3 FuncBodies: FuncBody .

    $default  reduce using rule 3 (FuncBodies)


State 5

    7 Stmt: '(' . Note ')'
    8     | '(' . Barrier ')'
    9     | '(' . Insn ')'
   10     | '(' . JumpInsn ')'
   11     | '(' . Call ')'
   12     | '(' . CodeLabel ')'

    T_Note       shift, and go to state 10
    T_Insn       shift, and go to state 11
    T_JumpInsn   shift, and go to state 12
    T_CallInsn   shift, and go to state 13
    T_Barrier    shift, and go to state 14
    T_CodeLabel  shift, and go to state 15

    Note       go to state 16
    Barrier    go to state 17
    CodeLabel  go to state 18
    Insn       go to state 19
    JumpInsn   go to state 20
    Call       go to state 21
    RetCall    go to state 22
    NoRetCall  go to state 23


State 6

    4 FuncBody: T_FunBegin Stmts .
    5 Stmts: Stmts . Stmt

    '('  shift, and go to state 5

    $default  reduce using rule 4 (FuncBody)

    Stmt  go to state 24


State 7

    6 Stmts: Stmt .

    $default  reduce using rule 6 (Stmts)


State 8

    0 $accept: Program $end .

    $default  accept


State 9

    2 FuncBodies: FuncBodies FuncBody .

    $default  reduce using rule 2 (FuncBodies)


State 10

   13 Note: T_Note . T_IntConstant T_IntConstant T_IntConstant T_IntConstant
   14     | T_Note . T_IntConstant T_IntConstant T_IntConstant

    T_IntConstant  shift, and go to state 25


State 11

   21 Insn: T_Insn . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')'
   22     | T_Insn . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' T_ExprList '(' Operand ')' '(' T_Nil ')' ')'
   23     | T_Insn . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' Integer '(' T_ExprList '(' Operand ')' '(' T_Nil ')' ')'
   24     | T_Insn . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' Integer '(' T_Nil ')'
   25     | T_Insn . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_ConstInt T_IntConstant ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')'
   26     | T_Insn . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' ':' T_IntConstant '(' T_Nil ')' ')'

    T_IntConstant  shift, and go to state 26


State 12

  124 JumpInsn: T_JumpInsn . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Set '(' T_Pc ')' '(' Dest ')' ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')' T_RArrow T_IntConstant
  125         | T_JumpInsn . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Set '(' T_Pc ')' '(' Dest ')' ')' T_IntConstant '(' T_Nil ')' T_RArrow T_IntConstant

    T_IntConstant  shift, and go to state 27


State 13

  147 RetCall: T_CallInsn . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Set '(' T_Reg ':' TypeInfo T_IntConstant ')' '(' T_Call '(' T_Mem ':' T_QIType '(' T_SymbolRef ':' T_DIType '(' T_StringConstant ')' ')' ')' '(' T_ConstInt Integer ')' ')' ')' T_StringConstant ':' T_IntConstant Integer '(' Junk2 ')' '(' ExprList ')'
  148 NoRetCall: T_CallInsn . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Call '(' T_Mem ':' T_QIType '(' T_SymbolRef ':' T_DIType '(' T_StringConstant ')' ')' ')' '(' T_ConstInt Integer ')' ')' T_StringConstant ':' T_IntConstant Integer '(' Junk2 ')' '(' ExprList ')'

    T_IntConstant  shift, and go to state 28


State 14

   15 Barrier: T_Barrier . T_IntConstant T_IntConstant T_IntConstant

    T_IntConstant  shift, and go to state 29


State 15

   16 CodeLabel: T_CodeLabel . T_IntConstant T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Nil ')'
   17          | T_CodeLabel . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Nil ')'
   18          | T_CodeLabel . T_IntConstant T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_StringConstant ')'

    T_IntConstant  shift, and go to state 30


State 16

    7 Stmt: '(' Note . ')'

    ')'  shift, and go to state 31


State 17

    8 Stmt: '(' Barrier . ')'

    ')'  shift, and go to state 32


State 18

   12 Stmt: '(' CodeLabel . ')'

    ')'  shift, and go to state 33


State 19

    9 Stmt: '(' Insn . ')'

    ')'  shift, and go to state 34


State 20

   10 Stmt: '(' JumpInsn . ')'

    ')'  shift, and go to state 35


State 21

   11 Stmt: '(' Call . ')'

    ')'  shift, and go to state 36


State 22

  145 Call: RetCall .

    $default  reduce using rule 145 (Call)


State 23

  146 Call: NoRetCall .

    $default  reduce using rule 146 (Call)


State 24

    5 Stmts: Stmts Stmt .

    $default  reduce using rule 5 (Stmts)


State 25

   13 Note: T_Note T_IntConstant . T_IntConstant T_IntConstant T_IntConstant
   14     | T_Note T_IntConstant . T_IntConstant T_IntConstant

    T_IntConstant  shift, and go to state 37


State 26

   21 Insn: T_Insn T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')'
   22     | T_Insn T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' T_ExprList '(' Operand ')' '(' T_Nil ')' ')'
   23     | T_Insn T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' Integer '(' T_ExprList '(' Operand ')' '(' T_Nil ')' ')'
   24     | T_Insn T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' Integer '(' T_Nil ')'
   25     | T_Insn T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' T_ConstInt T_IntConstant ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')'
   26     | T_Insn T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' ':' T_IntConstant '(' T_Nil ')' ')'

    T_IntConstant  shift, and go to state 38


State 27

  124 JumpInsn: T_JumpInsn T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' T_Set '(' T_Pc ')' '(' Dest ')' ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')' T_RArrow T_IntConstant
  125         | T_JumpInsn T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' T_Set '(' T_Pc ')' '(' Dest ')' ')' T_IntConstant '(' T_Nil ')' T_RArrow T_IntConstant

    T_IntConstant  shift, and go to state 39


State 28

  147 RetCall: T_CallInsn T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' T_Set '(' T_Reg ':' TypeInfo T_IntConstant ')' '(' T_Call '(' T_Mem ':' T_QIType '(' T_SymbolRef ':' T_DIType '(' T_StringConstant ')' ')' ')' '(' T_ConstInt Integer ')' ')' ')' T_StringConstant ':' T_IntConstant Integer '(' Junk2 ')' '(' ExprList ')'
  148 NoRetCall: T_CallInsn T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' T_Call '(' T_Mem ':' T_QIType '(' T_SymbolRef ':' T_DIType '(' T_StringConstant ')' ')' ')' '(' T_ConstInt Integer ')' ')' T_StringConstant ':' T_IntConstant Integer '(' Junk2 ')' '(' ExprList ')'

    T_IntConstant  shift, and go to state 40


State 29

   15 Barrier: T_Barrier T_IntConstant . T_IntConstant T_IntConstant

    T_IntConstant  shift, and go to state 41


State 30

   16 CodeLabel: T_CodeLabel T_IntConstant . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_Nil ')'
   17          | T_CodeLabel T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' T_Nil ')'
   18          | T_CodeLabel T_IntConstant . T_IntConstant T_IntConstant T_IntConstant T_IntConstant '(' T_StringConstant ')'

    T_IntConstant  shift, and go to state 42


State 31

    7 Stmt: '(' Note ')' .

    $default  reduce using rule 7 (Stmt)


State 32

    8 Stmt: '(' Barrier ')' .

    $default  reduce using rule 8 (Stmt)


State 33

   12 Stmt: '(' CodeLabel ')' .

    $default  reduce using rule 12 (Stmt)


State 34

    9 Stmt: '(' Insn ')' .

    $default  reduce using rule 9 (Stmt)


State 35

   10 Stmt: '(' JumpInsn ')' .

    $default  reduce using rule 10 (Stmt)


State 36

   11 Stmt: '(' Call ')' .

    $default  reduce using rule 11 (Stmt)


State 37

   13 Note: T_Note T_IntConstant T_IntConstant . T_IntConstant T_IntConstant
   14     | T_Note T_IntConstant T_IntConstant . T_IntConstant

    T_IntConstant  shift, and go to state 43


State 38

   21 Insn: T_Insn T_IntConstant T_IntConstant . T_IntConstant T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')'
   22     | T_Insn T_IntConstant T_IntConstant . T_IntConstant T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' T_ExprList '(' Operand ')' '(' T_Nil ')' ')'
   23     | T_Insn T_IntConstant T_IntConstant . T_IntConstant T_IntConstant '(' MainCmd ')' Integer '(' T_ExprList '(' Operand ')' '(' T_Nil ')' ')'
   24     | T_Insn T_IntConstant T_IntConstant . T_IntConstant T_IntConstant '(' MainCmd ')' Integer '(' T_Nil ')'
   25     | T_Insn T_IntConstant T_IntConstant . T_IntConstant T_IntConstant '(' T_ConstInt T_IntConstant ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')'
   26     | T_Insn T_IntConstant T_IntConstant . T_IntConstant T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' ':' T_IntConstant '(' T_Nil ')' ')'

    T_IntConstant  shift, and go to state 44


State 39

  124 JumpInsn: T_JumpInsn T_IntConstant T_IntConstant . T_IntConstant T_IntConstant '(' T_Set '(' T_Pc ')' '(' Dest ')' ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')' T_RArrow T_IntConstant
  125         | T_JumpInsn T_IntConstant T_IntConstant . T_IntConstant T_IntConstant '(' T_Set '(' T_Pc ')' '(' Dest ')' ')' T_IntConstant '(' T_Nil ')' T_RArrow T_IntConstant

    T_IntConstant  shift, and go to state 45


State 40

  147 RetCall: T_CallInsn T_IntConstant T_IntConstant . T_IntConstant T_IntConstant '(' T_Set '(' T_Reg ':' TypeInfo T_IntConstant ')' '(' T_Call '(' T_Mem ':' T_QIType '(' T_SymbolRef ':' T_DIType '(' T_StringConstant ')' ')' ')' '(' T_ConstInt Integer ')' ')' ')' T_StringConstant ':' T_IntConstant Integer '(' Junk2 ')' '(' ExprList ')'
  148 NoRetCall: T_CallInsn T_IntConstant T_IntConstant . T_IntConstant T_IntConstant '(' T_Call '(' T_Mem ':' T_QIType '(' T_SymbolRef ':' T_DIType '(' T_StringConstant ')' ')' ')' '(' T_ConstInt Integer ')' ')' T_StringConstant ':' T_IntConstant Integer '(' Junk2 ')' '(' ExprList ')'

    T_IntConstant  shift, and go to state 46


State 41

   15 Barrier: T_Barrier T_IntConstant T_IntConstant . T_IntConstant

    T_IntConstant  shift, and go to state 47


State 42

   16 CodeLabel: T_CodeLabel T_IntConstant T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' T_Nil ')'
   17          | T_CodeLabel T_IntConstant T_IntConstant . T_IntConstant T_IntConstant '(' T_Nil ')'
   18          | T_CodeLabel T_IntConstant T_IntConstant . T_IntConstant T_IntConstant T_IntConstant '(' T_StringConstant ')'

    T_IntConstant  shift, and go to state 48


State 43

   13 Note: T_Note T_IntConstant T_IntConstant T_IntConstant . T_IntConstant
   14     | T_Note T_IntConstant T_IntConstant T_IntConstant .

    T_IntConstant  shift, and go to state 49

    $default  reduce using rule 14 (Note)


State 44

   21 Insn: T_Insn T_IntConstant T_IntConstant T_IntConstant . T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')'
   22     | T_Insn T_IntConstant T_IntConstant T_IntConstant . T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' T_ExprList '(' Operand ')' '(' T_Nil ')' ')'
   23     | T_Insn T_IntConstant T_IntConstant T_IntConstant . T_IntConstant '(' MainCmd ')' Integer '(' T_ExprList '(' Operand ')' '(' T_Nil ')' ')'
   24     | T_Insn T_IntConstant T_IntConstant T_IntConstant . T_IntConstant '(' MainCmd ')' Integer '(' T_Nil ')'
   25     | T_Insn T_IntConstant T_IntConstant T_IntConstant . T_IntConstant '(' T_ConstInt T_IntConstant ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')'
   26     | T_Insn T_IntConstant T_IntConstant T_IntConstant . T_IntConstant '(' MainCmd ')' T_StringConstant ':' T_IntConstant Integer '(' ':' T_IntConstant '(' T_Nil ')' ')'

    T_IntConstant  shift, and go to state 50


State 45

  124 JumpInsn: T_JumpInsn T_IntConstant T_IntConstant T_IntConstant . T_IntConstant '(' T_Set '(' T_Pc ')' '(' Dest ')' ')' T_StringConstant ':' T_IntConstant Integer '(' T_Nil ')' T_RArrow T_IntConstant
  125         | T_JumpInsn T_IntConstant T_IntConstant T_IntConstant . T_IntConstant '(' T_Set '(' T_Pc ')' '(' Dest ')' ')' T_IntConstant '(' T_Nil ')' T_RArrow T_IntConstant

    T_IntConstant  shift, and go to state 51


State 46
